Correction de l'espace - version mobile

--- a/css/style-2.css
+++ b/css/style-2.css
@@ -404,7 +404,6 @@ box-sizing: border-box;
 .section-activités {
   width: 100%;
   height: 559.02px;
-  padding: 30px;
   gap: 30px;
 }
 
@@ -572,6 +571,10 @@ footer {
 	}
 }
 
+.section-activités {
+  padding: 30px;
+}
+
 /* Small devices (phones, less than 768px) */
 @media screen and (max-width: 768px) {
 
@@ -617,7 +620,7 @@ footer {
   .info {
     width: 100%;
     height: 432px;
-    padding: 0px 20px 0px 20px;
+    padding-left: 10px;
   }
 
   .info-foot {
@@ -705,7 +708,6 @@ footer {
 
 	.hebergements-and-populaires section {
 		border-radius: 0;
-		padding: 30px 20px;
 	}
 
 	.populaires {
@@ -761,6 +763,7 @@ footer {
     flex-direction: column;
 		gap: 15px;
 		height: 100%;
+    padding: 20px 0px;
 	}
   .frame-14 {
     flex-direction: column;
@@ -775,10 +778,7 @@ footer {
 		flex-direction: column;
     display: flex;
     align-items: flex-start;
-		margin-top: 35px;
-		padding: 30px;
-    height: 600px;
-    gap: 50px;
+    height: 640px;
 	}
 
   .a-propos {
